--- a/frontend/web/uw/sass/renovation.scss
+++ b/frontend/web/uw/sass/renovation.scss
@@ -68,10 +68,11 @@
 			}
 			&.start {
 				border: 1px solid #C09916;
-				background: #C09916;
-				color: #fff;
+				background: transparent;
+				color: #010211;
 				&.active {
-					background:#c19f63;
+					background:#C09916;
+					color: #fff;
 				}
 			}
 		}
