Правки Хрущевки VS новые дома

--- a/frontend/web/uw/sass/header.scss
+++ b/frontend/web/uw/sass/header.scss
@@ -1,6 +1,7 @@
 .header {
 	background: white;
 	position: relative;
+	height: 66px;
 	box-shadow: 0 5px 43px 0 rgba(10,9,9,.14);
     z-index: 2;
 	@media screen and (max-width: 999px) {
