--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -121,7 +121,7 @@ body {
 		height: auto;
 	}
 	.popup_text {
-		font: 30px "Proxima Nova Light", sans-serif;
+		font: 30px "Proxima Nova Thin", sans-serif;
 		font-weight: 300;
 		color: #ffffff;
 		padding-top: 46px;
@@ -131,8 +131,8 @@ body {
 		padding-top: 20px;
 		opacity: 1;
 		img {
-			width: 150px;
-			height: 150px;
+			width: 120px;
+			height: 120px;
 			margin: 0 auto;
 			display: block;
 		}
