--- a/frontend/web/uw/stylesheets/renovation.css
+++ b/frontend/web/uw/stylesheets/renovation.css
@@ -108,10 +108,18 @@
   margin-top: 19px;
 }
 /* line 83, ../sass/renovation.scss */
+.renovation .areas_table.yellow thead th {
+  background: #C09916;
+}
+/* line 86, ../sass/renovation.scss */
+.renovation .areas_table.blue thead th {
+  background: #0082A8;
+}
+/* line 89, ../sass/renovation.scss */
 .renovation .areas_table {
   font-family: "Proxima Nova Light", sans-serif;
 }
-/* line 85, ../sass/renovation.scss */
+/* line 91, ../sass/renovation.scss */
 .renovation .areas_table .title_table {
   font-family: "Proxima Nova Light", sans-serif;
   font-size: 40px;
@@ -120,53 +128,52 @@
   padding-bottom: 23px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 85, ../sass/renovation.scss */
+  /* line 91, ../sass/renovation.scss */
   .renovation .areas_table .title_table {
     padding-left: 20px;
     padding-right: 20px;
     line-height: 40px;
   }
 }
-/* line 97, ../sass/renovation.scss */
+/* line 103, ../sass/renovation.scss */
 .renovation .areas_table .summary {
   display: none;
 }
-/* line 100, ../sass/renovation.scss */
+/* line 106, ../sass/renovation.scss */
 .renovation .areas_table input {
   border-radius: 0px;
 }
-/* line 103, ../sass/renovation.scss */
+/* line 109, ../sass/renovation.scss */
 .renovation .areas_table table {
   border: 1px solid transparent;
 }
-/* line 106, ../sass/renovation.scss */
+/* line 112, ../sass/renovation.scss */
 .renovation .areas_table table thead th:not(:last-child) {
   border-right: 1px solid #fff;
 }
-/* line 109, ../sass/renovation.scss */
+/* line 115, ../sass/renovation.scss */
 .renovation .areas_table table thead th {
-  background: #C09916;
   color: white;
   padding: 17px 23px;
 }
 @media screen and (max-width: 639px) {
-  /* line 109, ../sass/renovation.scss */
+  /* line 115, ../sass/renovation.scss */
   .renovation .areas_table table thead th {
     padding: 12px;
   }
 }
-/* line 116, ../sass/renovation.scss */
+/* line 121, ../sass/renovation.scss */
 .renovation .areas_table table thead th:nth-child(2) {
   min-width: 130px;
 }
-/* line 119, ../sass/renovation.scss */
+/* line 124, ../sass/renovation.scss */
 .renovation .areas_table table thead th a {
   color: white;
   font-size: 18px;
   font-weight: 300;
   white-space: nowrap;
 }
-/* line 124, ../sass/renovation.scss */
+/* line 129, ../sass/renovation.scss */
 .renovation .areas_table table thead th a:after {
   background: url("../../images/table_sort.png");
   content: '';
@@ -175,18 +182,18 @@
   height: 8px;
   margin-left: 11px;
 }
-/* line 134, ../sass/renovation.scss */
+/* line 139, ../sass/renovation.scss */
 .renovation .areas_table table thead td {
   background: #eeeff1;
   padding: 5px 0;
 }
-/* line 137, ../sass/renovation.scss */
+/* line 142, ../sass/renovation.scss */
 .renovation .areas_table table thead td input {
   height: 60px;
   border: 0px;
   font-size: 18px;
 }
-/* line 142, ../sass/renovation.scss */
+/* line 147, ../sass/renovation.scss */
 .renovation .areas_table table thead td select {
   height: 60px;
   border: 0px;
@@ -194,23 +201,23 @@
   width: 100%;
   background: #fff;
 }
-/* line 151, ../sass/renovation.scss */
+/* line 156, ../sass/renovation.scss */
 .renovation .areas_table table th {
   border: 1px solid transparent;
 }
-/* line 157, ../sass/renovation.scss */
+/* line 162, ../sass/renovation.scss */
 .renovation .areas_table table tbody tr:nth-child(2n-1) td {
   background: #DADEE3;
 }
-/* line 161, ../sass/renovation.scss */
+/* line 166, ../sass/renovation.scss */
 .renovation .areas_table table tbody tr td {
   font-size: 18px;
 }
-/* line 167, ../sass/renovation.scss */
+/* line 172, ../sass/renovation.scss */
 .renovation .areas_table table td:not(:last-child) {
   border-right: 1px solid #EEEFF3;
 }
-/* line 170, ../sass/renovation.scss */
+/* line 175, ../sass/renovation.scss */
 .renovation .areas_table table td {
   border: 1px solid transparent;
   padding: 17px 23px;
@@ -218,34 +225,34 @@
   background: #eeeff1;
 }
 @media screen and (max-width: 639px) {
-  /* line 170, ../sass/renovation.scss */
+  /* line 175, ../sass/renovation.scss */
   .renovation .areas_table table td {
     padding: 12px;
   }
 }
-/* line 180, ../sass/renovation.scss */
+/* line 185, ../sass/renovation.scss */
 .renovation .areas_table .pagination {
   width: 100%;
   text-align: center;
 }
-/* line 183, ../sass/renovation.scss */
+/* line 188, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.prev a,
 .renovation .areas_table .pagination li.prev span {
   background: transparent;
   font-size: 20px;
 }
-/* line 188, ../sass/renovation.scss */
+/* line 193, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.next a,
 .renovation .areas_table .pagination li.next a {
   background: transparent;
   font-size: 20px;
 }
-/* line 193, ../sass/renovation.scss */
+/* line 198, ../sass/renovation.scss */
 .renovation .areas_table .pagination li {
   margin: 0px 4px;
   display: inline-block;
 }
-/* line 196, ../sass/renovation.scss */
+/* line 201, ../sass/renovation.scss */
 .renovation .areas_table .pagination li a {
   font-size: 15px;
   line-height: 38px;
@@ -256,17 +263,17 @@
   padding: 0px;
   text-align: center;
 }
-/* line 207, ../sass/renovation.scss */
+/* line 212, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.active a {
   color: white;
   background: #3B0F50;
   border: 1px solid #3B0F50;
 }
-/* line 214, ../sass/renovation.scss */
+/* line 219, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.next a, .renovation .areas_table .pagination li.prev a {
   border: 1px solid transparent;
 }
-/* line 217, ../sass/renovation.scss */
+/* line 222, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.next span, .renovation .areas_table .pagination li.prev span {
   border: 1px solid transparent;
   line-height: 38px;
