--- a/frontend/web/uw/sass/compare.scss
+++ b/frontend/web/uw/sass/compare.scss
@@ -2,15 +2,20 @@
 	color: #010211;
 	
 	h1 {
-		text-align: center;
-		font-family: "Proxima Nova";
-		font-size: 40px;
-		font-weight: bold;
-		color: #010211;
-		text-transform: uppercase;
-		margin-top: 73px;
-		margin-bottom: 19px;
+		margin-top: 75px;
+		margin-bottom: 50px;
+		font: 60px "Proxima Nova Regular", sans-serif;
 		line-height: 39px;
+		font-weight: bold;
+		color: #3B0F50;
+		text-transform: uppercase;
+		text-align: center;
+		letter-spacing: 1px;
+		span {
+			display: block;
+			margin-top: 20px;
+			font-size: 40px;
+		}
 		@media screen and (max-width: 1000px) {
 			font-size: 30px;
 			padding-left: 20px;
@@ -21,8 +26,7 @@
 		.item {
 			padding-bottom: 36px;
 			.item_title {
-				font-size: 30px;
-				font-family: "Proxima Nova"; 
+				font: 30px "Proxima Nova Thin", sans-serif;
 				font-weight: 100;
 				text-transform: uppercase;
 				text-align: center;
@@ -31,7 +35,7 @@
 				}
 			}
 			.item_img_logo {
-				padding-top: 12px;
+				padding-top: 15px;
 				text-align: center;
 				padding-bottom: 26px;
 			}
@@ -39,6 +43,10 @@
 				display: flex;
 				justify-content: space-between;
 				flex-wrap: wrap;
+				img {
+					display: block;
+					width: 100%;
+				}
 				.item_img {
 					position: relative;
 					&.item_img_padding {
@@ -67,7 +75,7 @@
 				}
 				.item_part {
 					width: calc(50% - 21px);
-					border-top: 2px solid #2e3346;
+					border-top: 2px solid #283045;
 					padding-bottom: 35px;
 					background: white;
 					@media screen and (max-width: 767px) {
@@ -77,7 +85,7 @@
 					p {
 						padding: 0px 32px;
 					    font-size: 18px;
-					    font-family: "Proxima Nova";
+					    font-family: "Proxima Nova Light", sans-serif;
 					    font-weight: 300;
 					    padding-top: 27px;
 					    line-height: 30px;
